# Parallel-Drone-Delivery

./: .gitattributes  Bakery.docx  CMakeLists.txt  README.md  simulation  state.json
frontend/: index.html
frontend/src/: App.jsx  styles.css
frontend/src/api/: simulationClient.js
frontend/src/components/: BakeryStats.jsx  ControlPanel.jsx  CustomerTable.jsx  SimulationMap.jsx
include/: algorithms.h  entities.h
server/: server.js  state.json
src/: alforithms.c  algorithms.c  entities.c  main.c  produceBreadTests.c  updateDronesTests.c
tests/: AlgoTests.c  produceBreadTests.c  updateDronesTests.c
